--- a/.env.example
+++ b/.env.example
@@ -2,12 +2,12 @@
 DATABASE_HOST=localhost
 DATABASE_PORT=3306
 DATABASE_NAME=game
-DATABASE_USER=homestead
-DATABASE_PASSWORD=secret
+DATABASE_USER=root
+DATABASE_PASSWORD=
 
 # Testing database
 TEST_DATABASE_HOST=localhost
 TEST_DATABASE_PORT=3306
 TEST_DATABASE_NAME=game_test
-TEST_DATABASE_USER=homestead
-TEST_DATABASE_PASSWORD=secret
+TEST_DATABASE_USER=root
+TEST_DATABASE_PASSWORD=
